Fixed so users with larger screens does not see the horizontal scroll unless needed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .overflow-scroll {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .card {
